--- a/config
+++ b/config
@@ -1,5 +1,5 @@
-method = rectangle # rectangle, trapezium, simpson
+method = simpson # rectangle, trapezium, simpson
 low_lim = 0
 high_lim = 1
-steps = 199
+steps = 100
 function = sin # sin, cos, log
